[gd_scene load_steps=11 format=3 uid="uid://sb7lphcf5qsm"]

[ext_resource type="Theme" uid="uid://gmqta8b8i02m" path="res://assets/theme_JBot.tres" id="1_w8k42"]
[ext_resource type="Texture2D" uid="uid://cusnsfi5me8eb" path="res://assets/ip_image.png" id="2_1vr63"]
[ext_resource type="Script" uid="uid://qsw6f73bkeyu" path="res://client/changer ip/container_ip_et_serveur.gd" id="2_r7pur"]
[ext_resource type="Texture2D" uid="uid://d0emrrgw86qe" path="res://assets/port_image.png" id="3_m0c5h"]
[ext_resource type="Script" uid="uid://c8s3ox7xqhy86" path="res://client/changer ip/animation_player.gd" id="4_m0c5h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w8k42"]
bg_color = Color(0.162066, 0.162066, 0.162065, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="Animation" id="Animation_wf3mb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("éléments ui/CenterContainer/VBoxContainer/ip serveur:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("éléments ui/CenterContainer/VBoxContainer/port serveur:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("éléments ui/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/retour:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("éléments ui/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/valider:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("éléments ui/fond champs:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("éléments ui/ip image:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("éléments ui/port image:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_r7pur"]
resource_name = "apparition"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("éléments ui/CenterContainer/VBoxContainer/ip serveur:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("éléments ui/CenterContainer/VBoxContainer/port serveur:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("éléments ui/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/retour:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("éléments ui/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/valider:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("éléments ui/fond champs:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("éléments ui/ip image:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("éléments ui/port image:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_m0c5h"]
resource_name = "disparition"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("éléments ui/fond champs:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("éléments ui/CenterContainer/VBoxContainer/ip serveur:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("éléments ui/CenterContainer/VBoxContainer/port serveur:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("éléments ui/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/retour:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("éléments ui/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/valider:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("éléments ui/ip image:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("éléments ui/port image:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4wcf7"]
_data = {
&"RESET": SubResource("Animation_wf3mb"),
&"apparition": SubResource("Animation_r7pur"),
&"disparition": SubResource("Animation_m0c5h")
}

[node name="ChangerIp" type="Node2D"]

[node name="centre" type="CenterContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 510.0
offset_right = 1152.0
offset_bottom = 556.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="popup" type="VBoxContainer" parent="centre"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="éléments ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="fond" type="ColorRect" parent="éléments ui"]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 655.0
color = Color(0.273873, 0.273873, 0.273873, 1)

[node name="fond champs" type="Panel" parent="éléments ui"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(500, 300)
layout_mode = 0
offset_left = 306.0
offset_top = 174.0
offset_right = 841.0
offset_bottom = 474.0
theme_override_styles/panel = SubResource("StyleBoxFlat_w8k42")

[node name="CenterContainer" type="CenterContainer" parent="éléments ui"]
layout_mode = 0
offset_top = 7.0
offset_right = 1150.0
offset_bottom = 656.0

[node name="VBoxContainer" type="VBoxContainer" parent="éléments ui/CenterContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = ExtResource("1_w8k42")
theme_override_constants/separation = 21
script = ExtResource("2_r7pur")

[node name="ip serveur" type="LineEdit" parent="éléments ui/CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "ip serveur"

[node name="port serveur" type="LineEdit" parent="éléments ui/CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "port serveur"

[node name="CenterContainer" type="CenterContainer" parent="éléments ui/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="éléments ui/CenterContainer/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 30

[node name="retour" type="Button" parent="éléments ui/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
text = "retour"

[node name="valider" type="Button" parent="éléments ui/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
text = "valider"

[node name="ip image" type="TextureRect" parent="éléments ui"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 334.0
offset_top = 220.0
offset_right = 846.0
offset_bottom = 732.0
scale = Vector2(0.11, 0.11)
texture = ExtResource("2_1vr63")

[node name="port image" type="TextureRect" parent="éléments ui"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 334.0
offset_top = 303.0
offset_right = 846.0
offset_bottom = 815.0
scale = Vector2(0.11, 0.11)
texture = ExtResource("3_m0c5h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4wcf7")
}
script = ExtResource("4_m0c5h")

[connection signal="pressed" from="éléments ui/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/retour" to="AnimationPlayer" method="_on_retour_pressed"]
[connection signal="pressed" from="éléments ui/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/valider" to="AnimationPlayer" method="_on_valider_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="AnimationPlayer" method="_on_animation_finished"]
